added utils and restructured the folder

--- a/gp_classification_visualisation.ipynb
+++ b/gp_classification_visualisation.ipynb
@@ -15,13 +15,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Here, we visualise the output of gaussian processes for classification. \n",
-    "We generate data consisting t Generate two classes of data with the same population size (N1=N2=50), sigma = 0.1, mean1 = [2,2], mean2= [3,3]:"
+    "We generate data consisting of two classes with the same population size (N1=N2=50), where \n",
+    "sigma = 0.1, mean1 = [2,2], mean2= [3,3]:"
    ]
   },
   {
@@ -72,6 +71,7 @@
    ],
    "source": [
     "## append column of 1s for offset\n",
+    "\n",
     "offset_col = np.ones((len(X), 1))\n",
     "X_new = np.append(offset_col, X, axis=1)\n",
     "\n",
@@ -400,13 +400,6 @@
     "           extent =[0,5,0,5], \n",
     "            interpolation='bilinear', cmap = 'jet')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
